--- a/src/Row.css
+++ b/src/Row.css
@@ -1,11 +1,20 @@
+.rows{
+    margin: 10px;
+}
 .posters{
     width: 100%;
     object-fit: contain;
-    max-height: 120px;
-    margin-right: 10px;
+    max-height: 150px;
+    margin-right: 12px;
+}
+.postersLarge{
+    max-height: 300px;
+}
+.postersLarge:hover{
+    transform:scale(1.12)
 }
 .posters:hover{
-    transform: scale(1.1);
+    transform: scale(1.08);
     transition: 300ms;
     box-shadow: 10px black;
 }
